<resources>
    <string name="app_name">DiscoverMovie</string>
    <string name="button_startQuestionnaire">START</string>
    <string name="find_a_movie">Find a Movie!</string>
    <string name="which_kind_of_movie_do_you_prefer">Which kind of movie do you prefer?</string>
    <string name="which_company_do_you_prefer">Which company do you prefer?</string>
    <string name="best_rated">Best Rated</string>
    <string name="newest">Newest</string>
    <string name="buttonNextQuestion">NEXT</string>
    <string name="returnHome">HOME</string>
    <string name="choose_movie_to_watch">Choose a poster you like!</string>
    <string name="buttonReturn">RETURN</string>
    <string name="imageBestRated">Best Rated Movie</string>
    <string name="imageNewest">Newest</string>
    <string name="movie_title">Finding Nemo</string>
    <string name="release_date">Release date: 2003-05-30</string>
    <string name="vote_avg">Vote average: 7.39</string>
    <string name="time">Duration: 120</string>
    <string name="overview">A tale which follows the comedic and eventful journeys of two fish, the fretful Marlin and his young son Nemo, who are separated from each other in the Great Barrier Reef when Nemo is unexpectedly taken from his home and thrust into a fish tank in a dentist\'s office overlooking Sydney Harbor. Buoyed by the companionship of a friendly but forgetful fish named Dory, the overly cautious Marlin embarks on a dangerous trek and finds himself the unlikely hero of an epic journey to rescue his son.</string>
    <string name="results">Results</string>>
    <string name="facebook_app_id">972480406190271</string>
    <string name="success_share_message">Content shared with success.</string>
    <string name="cancel_share_message">Content share canceled.</string>
    <string name="error_share_message">Error on sharing content.</string>
    <string name="returnResults">BACK</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
