<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_question"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="io.newnc.discovermovie.view.MovieDescription">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:text="@string/movie_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="15"
        android:gravity="center"
        android:id="@+id/movie_Title"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <ImageView
                    android:contentDescription="@string/imageBestRated"
                    android:id="@+id/movie_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/nemo"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:id="@+id/movie_cover_progress" />
            </RelativeLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:text="@string/release_date"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:shadowColor="@color/black"
                    android:shadowDx="-2"
                    android:shadowDy="-2"
                    android:shadowRadius="15"
                    android:gravity="center"
                    android:id="@+id/movie_release_date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/vote_avg"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:shadowColor="@color/black"
                    android:shadowDx="-2"
                    android:shadowDy="-2"
                    android:shadowRadius="15"
                    android:gravity="center"
                    android:id="@+id/movie_vote_avg"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="25dp">

                    <com.facebook.share.widget.SendButton
                        android:id="@+id/send_movie_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/com_facebook_messenger_blue"/>

                    <android.support.v4.widget.Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <com.facebook.share.widget.ShareButton
                        android:id="@+id/share_movie_button"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="@color/com_facebook_blue"/>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                android:background="@color/staleblue"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="15"
                android:gravity="center"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:id="@+id/overview"/>


        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">

            <Button
                android:id="@+id/returnHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:text="@string/returnHome"
                android:shadowColor="@color/black"
                android:background="@color/red"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"/>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>