<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_third_question"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    tools:context="io.newnc.discovermovie.view.ThirdQuestion">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:text="@string/which_company_do_you_prefer"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="15"
        android:gravity="center"
        android:id="@+id/textView"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11">

                <ImageButton
                    android:id="@+id/disney"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/invisible"
                    android:scaleType="fitXY"
                    android:visibility="invisible" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:id="@+id/disneyProgress" />

            </RelativeLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11">

                <ImageButton
                    android:id="@+id/pixar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/invisible"
                    android:scaleType="fitXY"
                    android:visibility="invisible" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:id="@+id/pixarProgress" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15">

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11">

                <ImageButton
                    android:id="@+id/dreamworks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/invisible"
                    android:scaleType="fitXY"
                    android:visibility="invisible" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:id="@+id/dreamworksProgress" />

            </RelativeLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="11">

                <ImageButton
                    android:id="@+id/ghibili"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/invisible"
                    android:scaleType="fitXY"
                    android:visibility="invisible" />

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:id="@+id/ghibiliProgress" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center">

            <Button
                android:id="@+id/returnHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:text="@string/returnHome"
                android:shadowColor="@color/black"
                android:background="@color/red"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"/>

            <Button
                android:id="@+id/nextQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:text="@string/buttonNextQuestion"
                android:background="@color/red"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>